--- a/src/options.html
+++ b/src/options.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>DNS Hijacking Killer options</title>
+<title>Search History Recorder</title>
 <script type="text/javascript" src="options.js"></script>
 <link rel="stylesheet" type="text/css" href="options.css" />
 </head>
 <body>
 	<div id="main">
-		DNS Hijacking Killer options
+		Search History Recorder
 	</div>
 </body>
