--- a/src/popup.html
+++ b/src/popup.html
@@ -2,9 +2,9 @@
 <html spellcheck="false">
   <head>
     <meta charset="utf-8">
-    <title>Dns hijacking killer Menu</title>
+    <title>Search History Recorder</title>
   </head>
   <body>
-    <div style="width: 100px;text-align: center;">dns劫持终结者</div>
+    <div style="width: 100px;text-align: center;">Google Search Keeper</div>
   </body>
 </html>
